# live-iron

./: Cargo.toml  README.MD
.github/workflows/: rust.yml
assets/: main.css
src/: automaton.rs  genetic_automaton.rs  lib.rs  ui.rs
src/components/: board.rs  error.rs  mod.rs  neighbourhood.rs  rule.rs  state.rs
src/components/genetic/: genotype.rs  mod.rs  population.rs  selection_strategy.rs
src/tests/: automaton_tests.rs  board_tests.rs  integration_tests.rs  mod.rs  neighbourhood_tests.rs  rule_tests.rs
