[package]
name = "live-iron"
version = "0.1.1"
edition = "2021"
keywords = ["cellular_automata", "genetic_algorithms", "machine_learning", "data_science"]
categories = ["science"]
authors = ["LordSaumya"]
license = "MIT"
repository = "https://github.com/LordSaumya/live-iron"
description = "A performant, extensible cellular automata library for Rust"
readme = "README.md"

[lib]
name = "live_iron"
path = "src/lib.rs"
doctest = false

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dependencies]
dioxus = { version = "0.6.0", features = [] }
rand = "0.8.5"
rayon = "1.10.0"
tokio = "1.44.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
